# probex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
probex/: Cargo.toml  build.rs
probex-common/: Cargo.toml
probex-common/src/: lib.rs
probex-ebpf/: Cargo.toml
probex-ebpf/src/: main.rs
probex-viewer/: Cargo.toml
probex-viewer/src/: api.rs  app.rs
probex-viewer/src/app/: view_model.rs
probex-viewer/src/app/components/: echart.rs  event_list.rs  flamegraph.rs  header.rs  io_statistics.rs  mod.rs  probe_catalog.rs  process_timeline.rs
probex-viewer/src/app/components/process_timeline/: mod.rs  process_tree.rs
probex/src/: args.rs  custom_codegen.rs  ebpf.rs  main.rs  privileged_daemon.rs  stacks.rs  viewer_backend.rs  viewer_privileged_daemon_client.rs  viewer_probe_catalog.rs  viewer_server.rs  viewer_trace_runtime.rs
snitch/: Cargo.toml  build.rs
snitch-common/: Cargo.toml
snitch-common/src/: lib.rs
snitch-ebpf/: Cargo.toml
snitch-ebpf/src/: main.rs
snitch-viewer/: Cargo.toml  Dioxus.toml  tailwind.css
snitch-viewer/src/: app.rs  main.rs  server.rs
snitch-viewer/src/app/: formatting.rs  view_model.rs
snitch-viewer/src/app/components/: flamegraph.rs  header.rs  mod.rs  pid_panel.rs  process_timeline.rs
snitch/src/: main.rs  viewer_backend.rs  viewer_server.rs
