[package]
name = "snitch-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
snitch-common = { path = "../snitch-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "snitch"
path = "src/main.rs"
